# UgolkiNew

./: CMakeLists.txt  README.md  ai.cpp  ai.h  build.bat  main.cpp  test_board.cpp
